tests/fixtures/pass/condition.sali
let absolute(value: i32): i32 = if value < 0 {
  -value
} else {
  value
}

let main(): i32 = if absolute(-42) == 42 {
  0
} else {
  1
}
