tests/fixtures/fail/closure_escape_return.sali
let make(base: i32) = {
  let add_base = { (increment: i32) -> base + increment }
  add_base
}

let main(): i32 = 0
